--- a/mongoDbCrud/src/main/resources/application.yml
+++ b/mongoDbCrud/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
       database: admin
       port: 27018
       host: localhost
+      auto-index-creation: false
+
+mongock:
+  migration-scan-package: com.akzam.mongoDbCrud.config.migration
+  enabled: true
 
 server:
   port: 8080
