--- a/postgreSqlCrud/src/main/resources/application.yml
+++ b/postgreSqlCrud/src/main/resources/application.yml
@@ -6,8 +6,12 @@ spring:
     driver-class-name: org.postgresql.Driver
 
   flyway:
-    enabled: false
+    enabled: true
     locations: classpath:db/migration
+
+  jpa:
+    hibernate:
+      ddl-auto: none
 
 server:
   port: 9090
