--- a/postgreSqlCrud/src/main/resources/application.yml
+++ b/postgreSqlCrud/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/telephony_db
-    username: postgres
-    password: postgres
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   flyway:
@@ -12,6 +12,3 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-
-server:
-  port: 9090
